# sncf-max

./: .envrc  .gitignore  README.md  env.example  example.py  flake.nix  pyproject.toml
cli/: __init__.py  __main__.py  app.py
frontend/: app.js  index.html  server.py  style.css
script/: build_graph.py  build_ter.py  deploy.sh  extract_graph.py
src/: __init__.py  api.py  booking.py  browser_debug.py  client.py  config.py  deadline.py  decomposition.py  models.py  monitor.py  scanner.py  scheduler.py
src/booking/: auth.py  booking.py  debug.py  voyages.py
src/network/: __init__.py  client.py  core.py  decomposition.py  fares.py  finder.py  graph.py  routes_graph.json  stations.json  stations.py  ter.py  tgv_graph.json
tests/: test_integration.py
