[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sncf-max"
version = "0.1.0"
description = "Discover and book TGV Max trips on SNCF - with CLI, scheduling, and auto-booking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["sncf", "tgv", "tgvmax", "train", "booking", "france", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Console",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",
]
booking = [
    "playwright>=1.40.0",
]
all = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "flask>=3.0",
    "tabulate>=0.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sncf-max"
Repository = "https://github.com/yourusername/sncf-max"

[project.scripts]
sncf-max = "cli.app:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["sncf_max*", "cli*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
